// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots object-list/Filters BooleanFilter 1`] = `
<div
  className="objectlist-row"
>
  <label
    className="objectlist-current-filter__filter-name"
  >
    Active
    :
  </label>
  <Select
    className="objectlist-current-filter__active-status"
    labelKey="label"
    loadOptions={undefined}
    multi={false}
    onChange={[Function]}
    optionRenderer={null}
    options={
      Array [
        Object {
          "label": "Yes",
          "value": "True",
        },
        Object {
          "label": "No",
          "value": "False",
        },
      ]
    }
    placeholder="Any value"
    value={null}
    valueKey="value"
  />
  <button
    className="objectlist-button objectlist-button--delete objectlist-button--icon objectlist-button--borderless"
    onClick={[Function]}
    title="Remove Filter"
  />
</div>
`;

exports[`Storyshots object-list/Filters ChoiceFilter 1`] = `
<div
  className="objectlist-row"
>
  <label
    className="objectlist-current-filter__filter-name"
  >
    Filter by
    :
  </label>
  <div
    className="objectlist-current-filter__filter-comparison"
  >
    <Select
      clearable={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Is",
            "value": "is",
          },
          Object {
            "label": "Is Not",
            "value": "is_not",
          },
        ]
      }
      value="is"
    />
  </div>
  <Select
    className="objectlist-current-filter__active-status"
    labelKey="label"
    loadOptions={undefined}
    multi={false}
    onChange={[Function]}
    optionRenderer={null}
    options={
      Array [
        Object {
          "label": "Zero",
          "value": 0,
        },
        Object {
          "label": "One",
          "value": 1,
        },
        Object {
          "label": "Two",
          "value": 2,
        },
        Object {
          "label": "Three",
          "value": 3,
        },
      ]
    }
    placeholder="Any value"
    value={null}
    valueKey="value"
  />
  <button
    className="objectlist-button objectlist-button--delete objectlist-button--icon objectlist-button--borderless"
    onClick={[Function]}
    title="Remove Filter"
  />
</div>
`;

exports[`Storyshots object-list/Filters CurrencyFilter 1`] = `
<div
  className="objectlist-row"
>
  <label
    className="objectlist-current-filter__filter-name"
  >
    Cost
    :
  </label>
  <div
    className="objectlist-current-filter__filter-comparison"
  >
    <Select
      clearable={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Exact",
            "value": "exact",
          },
          Object {
            "label": "Greater than",
            "value": "gt",
          },
          Object {
            "label": "Less than",
            "value": "lt",
          },
          Object {
            "label": "Greater than or equal",
            "value": "gte",
          },
          Object {
            "label": "Less than or equal",
            "value": "lte",
          },
        ]
      }
      value={
        Object {
          "label": "Exact",
          "value": "exact",
        }
      }
    />
  </div>
  <div
    className="objectlist-currency-filter objectlist-current-filter__active-status"
  >
    <span
      className="objectlist-currency-filter__symbol"
    >
      $
    </span>
    <input
      className="objectlist-input objectlist-input--currency"
      onChange={[Function]}
      type="text"
      value={undefined}
    />
    <span
      className="objectlist-currency-filter__decimal"
    >
      .00
    </span>
  </div>
  <button
    className="objectlist-button objectlist-button--delete objectlist-button--icon objectlist-button--borderless"
    onClick={[Function]}
    title="Remove Filter"
  />
</div>
`;

exports[`Storyshots object-list/Filters DateFilter 1`] = `
<div
  className="objectlist-row"
>
  <label
    className="objectlist-current-filter__filter-name"
  >
    Created
    :
  </label>
  <div
    className="objectlist-current-filter__filter-comparison"
  >
    <Select
      clearable={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Fixed Date",
            "value": "fixed",
          },
          Object {
            "label": "Relative to Now",
            "value": "relative",
          },
        ]
      }
      value="fixed"
    />
  </div>
  <div
    className="objectlist-input__container"
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder="15/07/2017"
      value="15/07/2017"
    />
  </div>
  <button
    className="objectlist-button objectlist-button--delete objectlist-button--icon objectlist-button--borderless"
    onClick={[Function]}
    title="Remove Filter"
  />
</div>
`;

exports[`Storyshots object-list/Filters DayFilter 1`] = `
<div
  className="objectlist-row"
>
  <div
    className="objectlist-dayfilter"
  >
    <button
      className="objectlist-button"
      onClick={[Function]}
    >
      ← Previous
    </button>
    <h3
      className="objectlist-dayfilter__day-name"
    >
      Wednesday February 28th 2018
    </h3>
    <button
      className="objectlist-button"
      onClick={[Function]}
    >
      Next →
    </button>
  </div>
</div>
`;

exports[`Storyshots object-list/Filters MonthFilter 1`] = `
<div
  className="objectlist-row"
>
  <label
    className="objectlist-current-filter__filter-name"
  >
    Due In
    :
  </label>
  <div
    className="month-picker "
  >
    <input
      className="objectlist-input objectlist-input--wide"
      onChange={[Function]}
      onClick={[Function]}
      placeholder="Select month"
      type="text"
      value="Feb 2018"
    />
    <div
      className="rmp-container rmp-table  "
    >
      <div
        className="rmp-overlay"
        disabled={undefined}
        onClick={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "KhtmlUserSelect": "none",
            "MozUserSelect": "none",
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "WebkitTouchCallout": "none",
            "WebkitUserSelect": "none",
            "msUserSelect": "none",
            "userSelect": "none",
          }
        }
      />
      <div
        className="rmp-cell"
      >
        <div
          className="rmp-popup  light "
        >
          <div
            className="rmp-pad"
          >
            <div>
              <label>
                2018
              </label>
              <i
                className="rmp-tab rmp-btn prev "
                data-id={0}
                onClick={[Function]}
              >
                &lt;
              </i>
              <i
                className="rmp-tab rmp-btn next disable"
                data-id={0}
                onClick={[Function]}
              >
                &gt;
              </i>
            </div>
            <ul>
              <li
                className="rmp-btn "
                data-id="0:1"
                onClick={[Function]}
              >
                Jan
              </li>
              <li
                className="rmp-btn active"
                data-id="0:2"
                onClick={[Function]}
              >
                Feb
              </li>
              <li
                className="rmp-btn "
                data-id="0:3"
                onClick={[Function]}
              >
                Mar
              </li>
              <li
                className="rmp-btn "
                data-id="0:4"
                onClick={[Function]}
              >
                Apr
              </li>
              <li
                className="rmp-btn "
                data-id="0:5"
                onClick={[Function]}
              >
                May
              </li>
              <li
                className="rmp-btn "
                data-id="0:6"
                onClick={[Function]}
              >
                Jun
              </li>
              <li
                className="rmp-btn "
                data-id="0:7"
                onClick={[Function]}
              >
                Jul
              </li>
              <li
                className="rmp-btn "
                data-id="0:8"
                onClick={[Function]}
              >
                Aug
              </li>
              <li
                className="rmp-btn "
                data-id="0:9"
                onClick={[Function]}
              >
                Sep
              </li>
              <li
                className="rmp-btn "
                data-id="0:10"
                onClick={[Function]}
              >
                Oct
              </li>
              <li
                className="rmp-btn "
                data-id="0:11"
                onClick={[Function]}
              >
                Nov
              </li>
              <li
                className="rmp-btn "
                data-id="0:12"
                onClick={[Function]}
              >
                Dec
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="objectlist-button objectlist-button--delete objectlist-button--icon objectlist-button--borderless"
    onClick={[Function]}
    title="Remove Filter"
  />
</div>
`;

exports[`Storyshots object-list/Filters MultiChoiceFilter 1`] = `
<div
  className="objectlist-row"
>
  <label
    className="objectlist-current-filter__filter-name"
  >
    Filter by
    :
  </label>
  <div
    className="objectlist-current-filter__filter-comparison"
  >
    <Select
      clearable={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Is",
            "value": "is",
          },
          Object {
            "label": "Is Not",
            "value": "is_not",
          },
        ]
      }
      value="is"
    />
  </div>
  <Select
    className="objectlist-current-filter__active-status"
    labelKey="label"
    loadOptions={undefined}
    multi={true}
    onChange={[Function]}
    optionRenderer={null}
    options={
      Array [
        Object {
          "label": "Zero",
          "value": 0,
        },
        Object {
          "label": "One",
          "value": 1,
        },
        Object {
          "label": "Two",
          "value": 2,
        },
        Object {
          "label": "Three",
          "value": 3,
        },
      ]
    }
    placeholder="Any value"
    value={null}
    valueKey="value"
  />
  <button
    className="objectlist-button objectlist-button--delete objectlist-button--icon objectlist-button--borderless"
    onClick={[Function]}
    title="Remove Filter"
  />
</div>
`;

exports[`Storyshots object-list/Filters NumberSliderFilter 1`] = `
<div
  className="objectlist-row"
>
  <label
    className="objectlist-current-filter__filter-name"
  >
    Filter by
    :
  </label>
  <div
    className="objectlist-current-filter__filter-comparison"
  >
    <Select
      clearable={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Exact",
            "value": "exact",
          },
          Object {
            "label": "Greater than",
            "value": "gt",
          },
          Object {
            "label": "Less than",
            "value": "lt",
          },
          Object {
            "label": "Greater than or equal",
            "value": "gte",
          },
          Object {
            "label": "Less than or equal",
            "value": "lte",
          },
        ]
      }
      value="exact"
    />
  </div>
  <div
    className="objectlist-row objectlist-current-filter__active-status"
  >
    <input
      className="objectlist-input objectlist-input__number-slider--number"
      max={100}
      min={0}
      onChange={[Function]}
      type="number"
      value={45}
    />
    <input
      className="objectlist-input__number-slider--slider"
      max={100}
      min={0}
      onChange={[Function]}
      onMouseUp={[Function]}
      type="range"
      value={45}
    />
  </div>
  <button
    className="objectlist-button objectlist-button--delete objectlist-button--icon objectlist-button--borderless"
    onClick={[Function]}
    title="Remove Filter"
  />
</div>
`;

exports[`Storyshots object-list/Filters RemoteChoiceFilter 1`] = `
<div
  className="objectlist-row"
>
  <label
    className="objectlist-current-filter__filter-name"
  >
    Filter by
    :
  </label>
  <Select.Async
    className="objectlist-current-filter__active-status"
    labelKey="label"
    loadOptions={[Function]}
    multi={false}
    onChange={[Function]}
    optionRenderer={null}
    options={Array []}
    placeholder="Any value"
    value={null}
    valueKey="value"
  />
  <button
    className="objectlist-button objectlist-button--delete objectlist-button--icon objectlist-button--borderless"
    onClick={[Function]}
    title="Remove Filter"
  />
</div>
`;

exports[`Storyshots object-list/Filters RemoteMultiChoiceFilter 1`] = `
<div
  className="objectlist-row"
>
  <label
    className="objectlist-current-filter__filter-name"
  >
    Filter by
    :
  </label>
  <div
    className="objectlist-current-filter__filter-comparison"
  >
    <Select
      clearable={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Is",
            "value": "is",
          },
          Object {
            "label": "Is Not",
            "value": "is_not",
          },
        ]
      }
      value={
        Object {
          "label": "Is",
          "value": "is",
        }
      }
    />
  </div>
  <Select.Async
    className="objectlist-current-filter__active-status"
    labelKey="label"
    loadOptions={[Function]}
    multi={true}
    onChange={[Function]}
    optionRenderer={null}
    options={Array []}
    placeholder="Any value"
    value={null}
    valueKey="value"
  />
  <button
    className="objectlist-button objectlist-button--delete objectlist-button--icon objectlist-button--borderless"
    onClick={[Function]}
    title="Remove Filter"
  />
</div>
`;

exports[`Storyshots object-list/Filters SearchFilter 1`] = `
<div
  className="objectlist-row"
>
  <input
    className="objectlist-current-filter__active-status objectlist-input"
    onChange={[Function]}
    placeholder="Search the table below"
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots object-list/Filters TextContainsFilter 1`] = `
<div
  className="objectlist-row"
>
  <label
    className="objectlist-current-filter__filter-name"
  >
    Filter by
    :
  </label>
  <div
    className="objectlist-current-filter__filter-comparison"
  >
    <Select
      clearable={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Contains",
            "value": "contains",
          },
          Object {
            "label": "Does Not Contain",
            "value": "not_contains",
          },
        ]
      }
      value="contains"
    />
  </div>
  <input
    className="objectlist-current-filter__active-status objectlist-input"
    onChange={[Function]}
    placeholder="Search the table below"
    type="text"
    value=""
  />
  <button
    className="objectlist-button objectlist-button--delete objectlist-button--icon objectlist-button--borderless"
    onClick={[Function]}
    title="Remove Filter"
  />
</div>
`;
